# esp32_u2f

./: CMakeLists.txt  README.md  sdkconfig.defaults  u2f_partitions.csv
.github/workflows/: build.yml
main/: CMakeLists.txt  Kconfig.projbuild  apdu.h  cose-key.h  ctap-parser.c  ctap.c  ctap.h  ctaphid.c  device.c  device.h  idf_component.yml  main.c  pin.c  secret.c  u2f.c  u2f.h  u2f_data.c  u2f_data.h  u2f_hid.c  u2f_hid.h
main/applets/admin/: admin.c
main/applets/ctap/: ctap.c  secret.c  u2f.c
main/applets/oath/: oath.c
main/applets/piv/: piv.c
main/c25519/: edsign.c  fprime.c  fprime.h
main/cert/: attestation-ca-cert.cnf  attestation-device-cert.cnf  gen_attestation_devive_cert.sh  u2f_genkeys.sh  v3.ext
main/crypto/: aes.c  algo.c  block-cipher.c  crypto-util.c  des.c  ecc.c  esp32_ed25519.c  hmac.c  mbedtls_ed25519.c  memzero.c  rand.c  rsa.c  sha.c  sha3.c  sm3.c
main/crypto/include/: aes.h  algo.h  block-cipher.h  crypto-util.h  des.h  ecc.h  esp32_ed25519.h  hmac.h  mbedtls_ed25519.h  memzero.h  rand.h  rsa.h  sha.h  sha3.h  sm3.h
main/include/: apdu.h  ccid.h  ccid_device.h  common.h  ctaphid.h  device.h
main/public_include/: tusb_config.h
main/usb/ccid/: ccid.c  ccid_device.c
main/usb/ctaphid/: ctaphid.c
